<resources>
    <string name="app_name">TeamSuite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_suite_logo">Team Suite Logo</string>
    <string name="welcome_text">Welcome to TeamSuite</string>
    <string name="login_text">Login to your account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">enter new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">enter confirm password</string>
    <string name="reset_password">Reset Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="employee">Employee</string>
    <string name="attendance">Attendance</string>
    <string name="leave">Leave</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="teamsuite">TeamSuite</string>
    <string name="demoName">SV</string>
    <string name="welcome_name">Welcome, AB</string>
    <string name="demo_role">Administrator</string>
    <string name="time_tracking">Time Tracking</string>
    <string name="clock_in">Clock</string>
    <string name="break_in">Break</string>
    <string name="work_time">Work Time</string>
    <string name="default_time">00:00:00</string>
    <string name="break_time">Break Time</string>
    <string name="attendance_calender">Attendance Calender</string>
    <string name="default_employee">248</string>
    <string name="present">Present</string>
    <string name="default_present">234</string>
    <string name="on_leave">On Leave</string>
    <string name="default_leave">12</string>
    <string name="absent">Absent</string>
    <string name="default_absent">2</string>
    <string name="this_month">This Month</string>
    <string name="default_hrs">180 hrs</string>
    <string name="days_present">Days Present</string>
    <string name="default_present_days">18</string>
    <string name="leave_balance">Scheduled Absence</string>
    <string name="default_leaves">1 days</string>
    <string name="email_and_password">Email and Password is required.</string>
    <string name="email_required">Email is required.</string>
    <string name="valid_email">Enter a valid email address.</string>
    <string name="password_required">Password is required.</string>
    <string name="welcome_user">Welcome, %1$s</string>
    <string name="demo_total_employees">9 Employees</string>
    <string name="add_employee">Add Employee</string>
    <string name="employee_name">Employee Name</string>
    <string name="android_developer">Android Developer</string>
    <string name="department">Department</string>
    <string name="it">IT</string>
    <string name="experience">Experience</string>
    <string name="_2_years">2 years</string>
    <string name="demo_gmail">abc@gmail.com</string>
    <string name="mobile_no">Mobile No</string>
    <string name="demo_no">9877898767</string>
    <string name="employee_id">Employee ID</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="married">Married</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="education">Education</string>
    <string name="experience_years">Experience (years)</string>
    <string name="job_role">Job Role</string>
    <string name="join_date">Join Date</string>
    <string name="update_employee_data">Update Employee Data</string>
    <string name="update_employee">Update Employee</string>
    <string name="empid_required">Employee Id is required.</string>
    <string name="name_required">Employee Name is required.</string>
    <string name="dob_required">Date of Birth is required.</string>
    <string name="select_gender">Select Gender</string>
    <string name="validate_email">Enter valid email.</string>
    <string name="mno_required">Mobile no is required.</string>
    <string name="validate_mno">Enter valid mobile number.</string>
    <string name="street_required">Street is required.</string>
    <string name="city_required">City is required.</string>
    <string name="state_required">State is required.</string>
    <string name="education_required">Education is required.</string>
    <string name="exp_required">Experience is required.</string>
    <string name="select_dept">Select Department</string>
    <string name="select_job_role">Select Job Role</string>
    <string name="joindate_required">Joining Date is required.</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="delete_confirmation_statement">Are you sure you want to delete this employee?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirmation_statement">Are you sure you want to logout?</string>
    <string name="companyid_not_found">Company ID not found</string>
    <string name="em001">EM001</string>
    <string name="new_password_required">Enter new password.</string>
    <string name="confirm_password_required">Please enter confirm password.</string>
    <string name="password_validation">Incorrect confirm password.</string>
    <string name="right_sign">✓</string>
    <string name="shreya_variya">Shreya Variya</string>
    <string name="basic_info">Basic Info</string>
    <string name="company_name">Company Name</string>
    <string name="demo_company_name">YESQUEST</string>
    <string name="demo_id">YQ00037</string>
    <string name="joining_date">Joining Date</string>
    <string name="demo_join_date">01/05/2025</string>
    <string name="name">Name</string>
    <string name="demo_dob">09/11/2005</string>
    <string name="marital_status">Marital Status</string>
    <string name="unmarried">Unmarried</string>
    <string name="contact_details">Contact Details</string>
    <string name="demo_email">variyashreya2005@gmail.com</string>
    <string name="demo_mno">9824610976</string>
    <string name="address">Address</string>
    <string name="demo_street">Katargam</string>
    <string name="demo_city">Surat</string>
    <string name="demo_state">Gujarat</string>
    <string name="degree">Degree</string>
    <string name="bsc_it">BSC IT</string>
    <string name="_1_year">1 year</string>
    <string name="job_information">Job Information</string>
    <string name="category">Category</string>
    <string name="admin">Admin</string>
    <string name="old_password">Old Password</string>
    <string name="fill_all_fields">Fill all the fields.</string>
    <string name="password_not_match">Password do not match.</string>
    <string name="change_password">Change Password</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="work">Work</string>
    <string name="_break">Break</string>
    <string name="demo_date">23/03/26</string>
    <string name="demo_status">Present</string>
    <string name="demo_work">08:30</string>
    <string name="demo_break">01:00</string>
    <string name="your_attendance_report">Your Attendance Report</string>
    <string name="view_employee_attendance">View Employee Attendance</string>
    <string name="check_detailed_employee_attendance_report">Check detailed employee attendance report</string>
    <string name="today_s_employee_attendance_report">Today\'s Employee Attendance Report</string>
    <string name="leave_policy">Leave Policy</string>
    <string name="add_leave_policy">Add Leave Policy</string>
    <string name="leave_type">Leave Type</string>
    <string name="max_leave_per_year">Max Leave Per Year</string>
    <string name="max_consecutive_leave">Max Consecutive Leave</string>
    <string name="company_leave_policies">Company Leave Policies</string>
    <string name="demo_leave">Casual Leave</string>
    <string name="max_leave_year">Max Leave / Year</string>
    <string name="demo_max_leave">12 Days</string>
    <string name="demo_consecutive_leave">3 Days</string>
    <string name="your_leave_report">Your Monthly Leave Report</string>
    <string name="apply_for_leave">Apply For Leave</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="reason">Reason</string>
    <string name="apply">Apply</string>
    <string name="demo_leave_policy">Sick Leave</string>
    <string name="demo_leave_status">Approved</string>
    <string name="demo_start_date">01 Aug 2025</string>
    <string name="demo_end_date">03 Aug 2025</string>
    <string name="demo_reason">Feeling unwell and advised bed rest by doctor.</string>
    <string name="employees_leave_report">Employees Leave Report</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="company_details">Company Details</string>
    <string name="domain">Domain</string>
    <string name="information_technology">Information Technology</string>
    <string name="website">Website</string>
    <string name="https_yesquesttech_com">https://yesquesttech.com/</string>
    <string name="about">About</string>
    <string name="innovate_enable_empower_through_tech">Innovate Enable Empower Through Tech</string>
    <string name="timing">Timing</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="all">All</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="select_date">Select Date</string>
    <string name="emp_id">Emp Id</string>
    <string name="_17_apr_2026">17 Apr 2026</string>
</resources>