<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.admin.SettingsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="?attr/colorSurface">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_profile_section">

            <!-- Company Logo -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgCompanyLogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/team_suite_logo"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/txtCompanyDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_details"
                android:textSize="@dimen/profile_title_size"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintTop_toBottomOf="@id/imgCompanyLogo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/profile_title_margin"
                android:layout_marginTop="@dimen/less_margin"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtCompanyLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:hint="@string/company_name"
                app:layout_constraintTop_toBottomOf="@id/txtCompanyDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/common_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/demo_company_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtDomainLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:hint="@string/domain"
                app:layout_constraintTop_toBottomOf="@id/txtCompanyLayout"
                app:layout_constraintStart_toStartOf="@id/txtCompanyLayout"
                app:layout_constraintEnd_toEndOf="@id/txtCompanyLayout"
                android:layout_marginTop="@dimen/profile_txt_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDomain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/information_technology"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtWebsiteLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:hint="@string/website"
                app:layout_constraintTop_toBottomOf="@id/txtDomainLayout"
                app:layout_constraintStart_toStartOf="@id/txtCompanyLayout"
                app:layout_constraintEnd_toEndOf="@id/txtCompanyLayout"
                android:layout_marginTop="@dimen/profile_txt_margin"
                android:layout_marginBottom="@dimen/profile_txt_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/https_yesquesttech_com"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEmailLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@id/txtWebsiteLayout"
                app:layout_constraintStart_toStartOf="@id/txtCompanyLayout"
                app:layout_constraintEnd_toEndOf="@id/txtCompanyLayout"
                android:layout_marginTop="@dimen/profile_txt_margin"
                android:layout_marginBottom="@dimen/profile_txt_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/demo_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtAboutLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:hint="@string/about"
                app:layout_constraintTop_toBottomOf="@id/txtEmailLayout"
                app:layout_constraintStart_toStartOf="@id/txtCompanyLayout"
                app:layout_constraintEnd_toEndOf="@id/txtCompanyLayout"
                android:layout_marginTop="@dimen/profile_txt_margin"
                android:layout_marginBottom="@dimen/profile_txt_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/innovate_enable_empower_through_tech"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/profile_title_size"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintTop_toBottomOf="@id/txtAboutLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtStreetLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                app:layout_constraintTop_toBottomOf="@id/txtAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/common_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/demo_street"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtCityLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                app:layout_constraintTop_toBottomOf="@id/txtStreetLayout"
                app:layout_constraintStart_toStartOf="@id/txtCompanyLayout"
                app:layout_constraintEnd_toEndOf="@id/txtCompanyLayout"
                android:layout_marginTop="@dimen/profile_txt_margin"
                android:layout_marginBottom="@dimen/profile_txt_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/demo_city"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtStateLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                app:layout_constraintTop_toBottomOf="@id/txtCityLayout"
                app:layout_constraintStart_toStartOf="@id/txtCompanyLayout"
                app:layout_constraintEnd_toEndOf="@id/txtCompanyLayout"
                android:layout_marginTop="@dimen/profile_txt_margin"
                android:layout_marginBottom="@dimen/profile_txt_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/demo_state"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtTiming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timing"
                android:textSize="@dimen/profile_title_size"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintTop_toBottomOf="@id/txtStateLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtStartLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:hint="@string/start_time"
                app:layout_constraintTop_toBottomOf="@id/txtTiming"
                app:layout_constraintStart_toStartOf="@id/txtCompanyLayout"
                app:layout_constraintEnd_toEndOf="@id/txtCompanyLayout"
                android:layout_marginTop="@dimen/profile_txt_margin"
                android:layout_marginBottom="@dimen/profile_txt_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/demo_state"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEndLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/no_width"
                android:layout_height="wrap_content"
                android:hint="@string/end_time"
                app:layout_constraintTop_toBottomOf="@id/txtStartLayout"
                app:layout_constraintStart_toStartOf="@id/txtCompanyLayout"
                app:layout_constraintEnd_toEndOf="@id/txtCompanyLayout"
                android:layout_marginTop="@dimen/profile_txt_margin"
                android:layout_marginBottom="@dimen/profile_txt_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/demo_state"/>

            </com.google.android.material.textfield.TextInputLayout>
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>