<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/common_padding">

    <TextView
        android:id="@+id/txtProfileName"
        android:layout_width="@dimen/profile_size"
        android:layout_height="@dimen/profile_size"
        android:background="@drawable/bg_circle_primary"
        android:gravity="center"
        android:text="@string/demoName"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txtWelcomeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_name"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/profile_margin"/>

    <TextView
        android:id="@+id/txtRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_role"
        android:textSize="@dimen/profile_text_size"
        android:textColor="@color/profile_text_color"/>

</LinearLayout>